Removed slants and fixed projects margins on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,7 @@ body{
   color: white;
   font-family: 'Roboto:400', sans-serif !important;
   top: 50%;
+  line-height: 0;
   position: absolute;
   width: 100%;
   text-align: center;
@@ -95,29 +96,6 @@ a, a:visited, a:active{
   background: #23272A;
 }
 
-/*Slanted Transition Styling*/
-
-.slant_top {
-  max-width: 100vw;
-  border-style: solid;
-  border-width: 100px 0 0 100vw;
-  border-color: transparent #2C2F33;
-}
-
-.slantd {
-  max-width: 100vw;
-  border-style: solid;
-  border-width: 100px 0 0 100vw;
-  border-color: white #2C2F33;
-}
-
-.slantl {
-  max-width: 100vw;
-  border-style: solid;
-  border-width: 100px 0 0 100vw;
-  border-color: #2C2F33 white;
-}
-
 /*Body Styling*/
 
 #home{
@@ -126,8 +104,8 @@ a, a:visited, a:active{
 
 #aboutme, #projects, #hackathons, #contact{
   max-height: auto;
-  padding-top: 128px;
-  padding-bottom: 128px;
+  padding-top: 12vh;
+  padding-bottom: 12vh;
   overflow: hidden;
 }
 
@@ -164,19 +142,6 @@ a, a:visited, a:active{
 }
 
 /*Button Styling*/
-
-.btn-flat{
-  width: 75%;
-  background: white;
-  color: #7289DA;
-
-  border-radius: 24px;
-}
-
-.btn-flat:hover{
-  background: #2C2F33;
-  color: white;
-}
 
 /*Scroll Link Styling/Animation*/
 
@@ -331,88 +296,76 @@ a:hover{
 
 /*Project Page Styling*/
 
-#project1, #project2{
+.projRow{
+  margin: 48px;
+  max-width: 900px;
+}
+
+.projBackground{
   background: #7289DA;
-
-  height: 450px;
-  max-width: 272px;
-
+  position: relative;
+  margin: 16px;
+  height: 400px;
   border-radius: 24px;
-
-  margin-bottom: 24px;
+  padding: 0 !important;
 }
 
-#proj1Logo{
+.projTitle{
+  background: #23272A;
   color: white;
-  font-size: 22px;
-  margin-left: 72px;
-  width: 100%;
-  top: 80px;
+  padding: 10px;
+  line-height: 1;
+}
 
+.projTitledate{
+  color: #99AAB5;
+  font-size: 12px;
+    line-height: 0;
+}
+
+.projP{
+  padding: 10px;
+  color: white;
+  font-size: 14px;
+}
+
+.projBtn{
+  color: #7289DA;
+  background: white;
+  border-radius: 50px;
+}
+
+.projBtnDiv{
+  text-align: center;
+}
+
+#proj1img{
+  width: 100%;
+  margin-top: 50px;
+}
+
+#proj2logo{
+  color: white;
+  font-size: 24px;
+  text-align: center;
   position: absolute;
+  margin-top: 80px;
+  margin-left: 25%;
 }
 
-#proj2Logo{
-  width: 100%;
-  margin-top: 48px;
-}
-
-.proj1Head, .proj2Head{
+#proj1bk{
+  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('images/proj2/bk.jpg');
+  background-position: center;
   height: 200px;
-
   border-top-left-radius: 24px;
   border-top-right-radius: 24px;
 }
 
-.proj1Head{
-  background: blue;
-  background: -webkit-linear-gradient(left top,rgba(41, 128, 185,1.0), rgba(22, 160, 133,1.0))
-
-}
-
-.proj2Head{
-  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("images/proj2/bk.jpg");
-  background-position: center;
-}
-
-.projTitle{
-  color: white;
-  background: #2C2F33;
-
-  font-size: 14px;
-
-  padding-top: 16px;
-  padding-bottom: 4px;
-}
-
-.projDate{
-  font-size: 12px;
-  color: #99AAB5;
-}
-
-.projTitleText{
-  margin-left: 18px;
-  line-height: 8px;
-}
-
-.projText{
-  color: white;
-
-  font-size: 14px;
-  margin: 18px;
-}
-
-.projBtn{
-  width: 100%;
-  margin-top: 58px;
-  margin-left: 12%;
-  margin-right: 12%;
-  top: 395px;
-}
-
-.projRow{
-  width: 850px;
-  margin-left: -15px;
+#proj2bk{
+  background: -webkit-linear-gradient(left top,rgba(41, 128, 185,1.0), rgba(22, 160, 133,1.0));
+  height: 200px;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
 }
 
 /*Hackathons Page Styling*/
@@ -423,6 +376,7 @@ a:hover{
   padding: 12px;
   max-width: 900px;
   margin-bottom: 48px;
+  position: relative;
   border-radius: 24px;
   min-height: 280px;
 
@@ -434,7 +388,7 @@ a:hover{
 }
 
 #hackbcaivlogo{
-  width: 100%;
+  max-width: 100%;
   max-width: 256px;
   max-height: 256px;
   float: left;
@@ -456,15 +410,16 @@ a:hover{
 /*Contacts Page Styling*/
 
 .contacts{
-
+  padding: 24px;
 }
 
 /*Footer Styling*/
 
 .footer{
   height: 7vh;
+  padding-bottom: 18px;
 
-  background: #2C2F33;
+  background: white;
 }
 
 .footerText{
@@ -475,7 +430,7 @@ a:hover{
   width: 100%;
   text-align: center;
 
-  color: white;
+  color: #2C2F33;
 }
 
 #heart{
